[gd_scene load_steps=5 format=2]

[ext_resource path="res://name_generation/WordGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://name_generation/NameGenerationTest.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[node name="NameGenerationTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 128.0
margin_right = -256.0
margin_bottom = -112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="VBoxContainer"]
margin_right = 768.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "NAME"
valign = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 0.847059, 0.545098, 1 )
margin_top = 42.0
margin_right = 768.0
margin_bottom = 46.0

[node name="Quote" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 768.0
margin_bottom = 65.0
bbcode_enabled = true
bbcode_text = "This is a big ole test."
text = "This is a big ole test."
fit_content_height = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 768.0
margin_bottom = 169.0
rect_min_size = Vector2( 0, 100 )
color = Color( 1, 1, 1, 0 )

[node name="GenerateSystem" type="Button" parent="VBoxContainer"]
margin_top = 173.0
margin_right = 768.0
margin_bottom = 223.0
rect_min_size = Vector2( 0, 50 )
text = "GENERATE SYSTEM"

[node name="GenerateArtifacts" type="Button" parent="VBoxContainer"]
margin_top = 227.0
margin_right = 768.0
margin_bottom = 277.0
rect_min_size = Vector2( 0, 50 )
text = "GENERATE ARTIFACTS"

[node name="WordGenerator" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="VBoxContainer/GenerateSystem" to="." method="_on_GenerateSystem_pressed"]
[connection signal="pressed" from="VBoxContainer/GenerateArtifacts" to="." method="_on_GenerateArtifacts_pressed"]
